<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/new_note_fragment_padding"
    tools:context=".fragments.NewNoteFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="5"
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="@color/black"/>

            <TextView
                android:layout_marginLeft="@dimen/spinner_margin_left"
                android:layout_weight="3"
                android:textColor="@color/black"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/noteColor"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_tv">

            <EditText
                android:id="@+id/et_title"
                android:layout_weight="5"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <Spinner
                android:layout_marginLeft="@dimen/spinner_margin_left"
                android:id="@+id/sp_color"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="match_parent">

            </Spinner>
        </LinearLayout>

        <EditText
            android:gravity="top"
            android:textColor="@color/black"
            android:id="@+id/et_content"
            android:layout_marginTop="@dimen/et_content_margin_top"
            android:layout_width="match_parent"
            android:layout_height="300dp" />

        <Button
            android:id="@+id/bt_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"/>
    </LinearLayout>
</FrameLayout>
